# prompt-engineering

./: .gitignore  pyproject.toml
prompt-engineering/: README.md  pyproject.toml
prompt-engineering/src/prompt_engineering/: 1-prompt_openai.ipynb  2-interactive_prompt.ipynb  3-summarizing.ipynb  4-Inferring.ipynb  5-transforming.ipynb  6-Chatbot.ipynb
