[tool.poetry]
name = "prompt-engineering"
version = "0.1.0"
description = "Python project to trainning ChatGPT building software"
authors = ["Ailton Antonio de Araujo <AiltonAntonioAraujo@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26.0"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
