[tool.poetry]
name = "prompt-engineering"
version = "0.1.0"
description = ""
authors = ["Ailton Antonio de Araujo <AiltonAntonioAraujo@github.com>"]
readme = "README.md"
packages = [{include = "prompt_engineering", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
