[tool.poetry]
name = "prompt-engineering"
version = "0.1.0"
description = ""
authors = ["Ailton Antonio de Araujo <AiltonAntonioAraujo@github.com>"]
readme = "README.md"
packages = [{include = "prompt_engineering", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
redlines = "^0.4.2"
python-dotenv = "^1.0.0"
markdown = "^3.4.4"
panel = "^1.2.3"
jupyter-bokeh = "^3.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
